# marketing-chat-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  debug_html_email.py  docker-compose.dev.yml  flow.md  gmail_credentials.json  langgraph_flow_explanation.md  langgraph_implementation_diagram.md  pyproject.toml  requirements.txt  run.py  setup.py  setup_oauth_env.py  setup_oauth_simple.py  system_architecture_diagram.md  test_complete_flow.py  test_delivery_debug.py  test_email_enhancements.py  test_email_node.py  test_flows.py  test_interactive_fast.py  test_interactive_full.py  test_response_generator.py  verify_readme_commands.py
.github/workflows/: ci.yml
API/: Dockerfile  README.md  docker-compose.yml  example_usage.py  requirements.txt  start.sh
API/app/: __init__.py  main.py
API/app/models/: campaign.py  responses.py
API/app/routes/: campaigns.py  health.py  websockets.py
API/app/services/: campaign_service.py  file_service.py  task_manager.py
API/app/utils/: auth.py  config.py  logging.py
data/: sample.txt
data/outbox/promote_fitness_trac_1754978093/: email_post.txt  facebook_post.txt  instagram_post.txt
runnables/: __init__.py  chat_fast_marketing_agent.py  chat_full_marketing_agent.py  chat_hashtag_agent.py  chat_image_agent.py  chat_text_agent_micro.py  run_text_agent_graph.py
src/: graph.py
src/agents/campaign/: __init__.py  full_marketing_agent.py
src/agents/core/: base_agent.py
src/agents/micro/: __init__.py  hashtag_only_agent.py  image_only_agent.py  text_only_agent.py
src/agents/text_agent/utils/: ui.py
src/config/: __init__.py  consultation_settings.py  settings.py
src/graphs/: __init__.py
src/graphs/campaign/: __init__.py  text_campaign_graph.py
src/graphs/consultant/: __init__.py  stateful_marketing_graph.py
src/graphs/micro/: __init__.py  hashtag_only_graph.py  image_only_graph.py  text_only_graph.py
src/nodes/: llm_node.py  router_node.py
src/nodes/compose/: __init__.py  response_generator_node.py
src/nodes/consultant/: __init__.py  answer_processor.py  completeness_evaluator.py  marketing_consultant_node.py  question_prioritizer.py
src/nodes/delivery/: __init__.py
src/nodes/delivery/decider/: __init__.py  sender_node.py
src/nodes/delivery/email/: __init__.py  send_email_node.py
src/nodes/delivery/facebook/: __init__.py  send_facebook_node.py
src/nodes/delivery/instagram/: __init__.py  send_instagram_node.py
src/nodes/generation/: __init__.py
src/nodes/generation/cta_hashtag/: __init__.py  cta_hashtag_node.py
src/nodes/generation/image/: __init__.py  image_generation_node.py
src/nodes/generation/text/: __init__.py  text_generation_node.py
src/nodes/intent/: __init__.py  creative_generation_node.py  parse_intent_node.py
src/prompts/: marketing_review_rubric.md  marketing_system_prompt.md
src/providers/: __init__.py
src/providers/email/: __init__.py  enhanced_smtp_provider.py  oauth_gmail_provider.py  smtp_provider.py
src/providers/llm/: openai_provider.py
src/registries/: __init__.py  agents.py  channels.py  consultation.py  nodes.py  providers.py
src/services/: consultation_manager.py
src/templates/: __init__.py
src/templates/email/: marketing_campaign.html
src/utils/: common.py  email_formatter.py  image_optimizer.py  logger.py  marketing_state.py  openai.py  state.py  state_converter.py
studio/: langgraph.json
tests/: README.md  __init__.py  dev_test_runner.py  qa_test_runner.py  run_tests.py
tests/integration/: __init__.py  test_full_marketing_flow.py  test_multichannel_delivery.py
tests/unit/: test_hashtag_only_agent.py  test_image_only_agent.py  test_micro_graphs.py  test_text_only_agent.py
tests/utils/: test_helpers.py
